[Feature request] Add multiple configmap support to Airflow chart
Signed-off-by: jamesgiu <james.giuffrida@gmail.com>

--- a/bitnami/airflow/values.yaml
+++ b/bitnami/airflow/values.yaml
@@ -501,6 +501,9 @@ extraEnvVars: []
 ## @param extraEnvVarsCM ConfigMap with extra environment variables for all the Airflow pods
 ##
 extraEnvVarsCM: ""
+## @param extraEnvVarsCMs ConfigMaps with extra environment variables for all the Airflow pods
+##
+extraEnvVarsCMs: []
 ## @param extraEnvVarsSecret Secret with extra environment variables for all the Airflow pods
 ##
 extraEnvVarsSecret: ""
